--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta charset="utf-8">
 	<title>Craigs Words App</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="/ad63e1c44c009009d6683b76bdc94eb5.css" rel="stylesheet"></head>
+<link href="./ad63e1c44c009009d6683b76bdc94eb5.css" rel="stylesheet"></head>
 
 <body>
 	<div class="container">
 		<div id="app">Loading...</div>
 	</div>
-<script type="text/javascript" src="/ea0504cb45d693cb0455.js"></script></body>
+<script type="text/javascript" src="./3b9759be3b3845d1fea4.js"></script></body>
 
 </html>
